--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
 
     <!-- About -->
-    <p>I am a PhD Student in Psychology and Neuroscience at Princeton University, advised by <a href="https://ncclab.princeton.edu/">Jon Cohen</a> and <a href="http://cocosci.princeton.edu/" >Tom Griffiths</a>. I am interested in human and artificial intelligence, and I use computational cognitive neuroscientific approaches to study control, learning, and decision-making.
+    <p>I am a PhD student in Psychology and Neuroscience at Princeton University, advised by <a href="https://ncclab.princeton.edu/">Jon Cohen</a> and <a href="http://cocosci.princeton.edu/" >Tom Griffiths</a>. I am interested in human and artificial intelligence, and I use computational cognitive (neuro)scientific approaches to study learning, decision-making, memory, and control.
     </p>
 
     <p>Previously, I was an undergraduate at Swarthmore College, where I studied Computer Science and Philosophy. I wrote a thesis under <a href="https://www.swarthmore.edu/profile/alan-baker">Alan Baker</a> using computational complexity and computational learning theory to formalize problems in moral epistemology.
