--- a/index.html
+++ b/index.html
@@ -9,51 +9,77 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500" rel="stylesheet">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-48763378-4"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-
-      gtag('config', 'UA-48763378-4');
-    </script>
+    <style>
+    body {
+        max-width: 70em;
+        padding: 5em 10em 0em 10em;
+    }
+</style>
 </head>
 
 <body>
- <h1>Mayank Agrawal</h1>
-    <h4>mayank dot agrawal at princeton dot edu</h4>
-    <!-- Links -->  /&nbsp
-    <a href="MayankAgrawalCV.pdf" >cv</a> &nbsp/&nbsp
-    <a href="https://twitter.com/_magrawal" >twitter</a> &nbsp/&nbsp
-    <a href="https://www.github.com/timshell/">github</a> &nbsp/
-    <br><br>
 
+    <h1>Mayank Agrawal</h1>
+         <h4>mayank dot agrawal at princeton dot edu</h4>
+         <!-- Links -->  /&nbsp
+         <a href="MayankAgrawalCV.pdf" >cv</a> &nbsp/&nbsp
+         <a href="https://twitter.com/_magrawal" >twitter</a> &nbsp/&nbsp
+         <a href="https://scholar.google.com/citations?user=H_fTQ0EAAAAJ&hl=en">scholar</a> &nbsp/
 
     <!-- About -->
-    <p>I am a PhD student in Psychology and Neuroscience at Princeton University, advised by <a href="https://ncclab.princeton.edu/">Jon Cohen</a> and <a href="http://cocosci.princeton.edu/" >Tom Griffiths</a>. I am interested in human and artificial intelligence, and I use computational cognitive (neuro)scientific approaches to study learning, decision-making, memory, and control.
+    <h2>overview</h2>
+    <div style="margin-left: 2em;">
+    <p>I am a PhD Student in Psychology and Neuroscience at Princeton University, advised by <a href="https://ncclab.princeton.edu/">Jon Cohen</a> and <a href="http://cocosci.princeton.edu/" >Tom Griffiths</a>. I am broadly interested in human and machine intelligence, and I use computational cognitive (neuro)scientific approaches to study learning, decision-making, memory, and control.
     </p>
 
-    <p>Previously, I was an undergraduate at Swarthmore College, where I studied Computer Science and Philosophy. I wrote a thesis under <a href="https://www.swarthmore.edu/profile/alan-baker">Alan Baker</a> using computational complexity and computational learning theory to formalize problems in moral epistemology.
+    <p>Previously, I was an undergraduate at Swarthmore College, where I studied Computer Science and Philosophy. I wrote a thesis under <a href="https://www.swarthmore.edu/profile/alan-baker">Alan Baker</a> using computational learning theory to formalize problems in moral epistemology.
     </p>
+
 
     <p>I have also spent time at Kallyope, the University of Oxford, Mercury Fund, Carnegie Mellon University, the University of Pennsylvania, and Breakthrough Houston.
     </p>
 
+    </div>
 
+    <h2>papers</h2>
 
+    <div style="margin-left: 2em;">
 
+    <p>The Temporal Structure of Cognitive Control Costs: A Normative Account of Fatigue and Boredom</a>
+      <br/>Mayank Agrawal, Marcelo G. Mattar, Nathaniel D. Daw, Jonathan D. Cohen
+      <br/><i>in prep</i>
+    </p>
 
-    <!--
-    .................................... <br>
-    -->
+    <p><a href="papers/AgrawalPetersonGriffiths20.pdf">Scaling up Psychology via Scientific Regret Minimization</a>
+      <br/>Mayank Agrawal, Joshua C. Peterson, Thomas L. Griffiths
+      <br/><i>Proceedings of the National Academy of Sciences</i>
+    </p>
+
+    <p><a href="papers/JasEtAl20.pdf">Pyglmnet: Python Implementation of Elastic-net Regularized Generalized Linear Models</a>
+      <br/>Mainak Jas, Titipat Achakulvisut, Aid Idrizović, Daniel Acuna, Matthew Antalek, Vinicius Marques, Tommy Odland, Ravi Garg, Mayank Agrawal, Yu Umegaki, Peter Foley, Hugo Fernandes, Drew Harris, Beibin Li, Olivier Pieters, Scott Otterson, Giovanni De Toni, Chris Rodgers, Eva Dyer, Matti Hamalainen, Konrad Kording, Pavan Ramkumar
+      <br/><i>Journal of Open Source Software</i>
+    </p>
+
+    <p><a href="papers/AgrawalPetersonGriffiths19.pdf">Using Machine Learning to Guide Cognitive Modeling: A Case Study in Moral Reasoning</a>
+      <br/>Mayank Agrawal, Joshua C. Peterson, Thomas L. Griffiths
+      <br/><i>Proceedings of the 41st Annual Conference of the Cognitive Science Society</i>
+    </p>
+
+    <p><a href="papers/MoraudTinkhauserAgrawalBrownBogacz18.pdf">Predicting Beta Bursts From Local Field Potentials to Improve Closed-Loop DBS Paradigms in Parkinson's Patients
+</a>
+      <br/>Eduardo M. Moraud, Gerd Tinkhauser, Mayank Agrawal, Peter Brown, Rafal Bogacz
+      <br/><i>Proceedings of the 40th Annual International Conference of the IEEE Engineering in Medicine and Biology Society</i>
+    </p>
+
+    </div>
+
 
     <br>
     <br>
     <br>
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
         <tr><td><br><p align="right"><font size="2">
-        Template credits <a href="http://willzeng.com/">here</a>
+        Template adapted from <a href="http://willzeng.com/">Will Zeng</a>
         </font></p></td></tr>
     </table>
 
