--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     <h1>Mayank Agrawal</h1>
          <h4>mayank dot agrawal at princeton dot edu</h4>
          <!-- Links -->  /&nbsp
-         <a href="MayankAgrawalCV.pdf" >cv</a> &nbsp/&nbsp
+<!--         <a href="index.html" >home</a> &nbsp/&nbsp
+ -->         <a href="MayankAgrawalCV.pdf" >cv</a> &nbsp/&nbsp
          <a href="https://twitter.com/_magrawal" >twitter</a> &nbsp/&nbsp
          <a href="https://scholar.google.com/citations?user=H_fTQ0EAAAAJ&hl=en">scholar</a> &nbsp/
-
+<!--          <a href="miscellany.html">miscellany</a> &nbsp/
+ -->
     <!-- About -->
     <h2>overview</h2>
     <div style="margin-left: 2em;">
@@ -35,14 +37,9 @@
 
     </div>
 
-    <h2>papers</h2>
+    <h2>publications</h2>
 
     <div style="margin-left: 2em;">
-
-    <p>The Temporal Structure of Cognitive Control Costs: A Normative Account of Fatigue and Boredom</a>
-      <br/>Mayank Agrawal, Marcelo G. Mattar, Nathaniel D. Daw, Jonathan D. Cohen
-      <br/><i>in prep</i>
-    </p>
 
     <p><a href="papers/AgrawalPetersonGriffiths20.pdf">Scaling up Psychology via Scientific Regret Minimization</a>
       <br/>Mayank Agrawal, Joshua C. Peterson, Thomas L. Griffiths
@@ -66,6 +63,20 @@
     </p>
 
     </div>
+
+    <h2>working papers</h2>
+
+    <div style="margin-left: 2em;">
+
+    <p>The Temporal Dynamics of Opportunity Costs: A Normative Account of Fatigue and Boredom
+      <br/>Mayank Agrawal, Marcelo G. Mattar, Nathaniel D. Daw, Jonathan D. Cohen
+    </p>
+
+      <p>Rediscovering and Extending Theories of Human Decision Making via Constrained Data-driven Learning
+      <br/>Joshua C. Peterson, David D. Bourgin, Mayank Agrawal, Daniel R. Reichman, Thomas L. Griffiths
+    </p>
+
+  </div>
 
 
     <br>
