--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
     </p>
 
       <p>Rediscovering and Extending Theories of Human Decision Making via Constrained Data-driven Learning
-      <br/>Joshua C. Peterson, David D. Bourgin, Mayank Agrawal, Daniel R. Reichman, Thomas L. Griffiths
+      <br/>Joshua C. Peterson, David D. Bourgin, Mayank Agrawal, Daniel Reichman, Thomas L. Griffiths
     </p>
 
   </div>
