--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- About -->
     <h2>overview</h2>
     <div style="margin-left: 2em;">
-    <p>I am a PhD Student in Psychology and Neuroscience at Princeton University, advised by <a href="https://ncclab.princeton.edu/">Jon Cohen</a> and <a href="http://cocosci.princeton.edu/" >Tom Griffiths</a>. I am broadly interested in human and machine intelligence, and I use computational cognitive (neuro)scientific approaches to study learning, decision-making, memory, and control.
+    <p>I am a PhD Student in Psychology and Neuroscience at Princeton University, advised by <a href="https://ncclab.princeton.edu/">Jon Cohen</a> and <a href="http://cocosci.princeton.edu/" >Tom Griffiths</a>. I am broadly interested in human and machine intelligence, and I use computational (neuro)scientific approaches to study high-level cognitive functions such as learning, decision-making, memory, and control.
     </p>
 
     <p>Previously, I was an undergraduate at Swarthmore College, where I studied Computer Science and Philosophy. I wrote a thesis under <a href="https://www.swarthmore.edu/profile/alan-baker">Alan Baker</a> using computational learning theory to formalize problems in moral epistemology.
@@ -68,13 +68,17 @@
 
     <div style="margin-left: 2em;">
 
-    <p>The Temporal Dynamics of Opportunity Costs: A Normative Account of Fatigue and Boredom
-      <br/>Mayank Agrawal, Marcelo G. Mattar, Nathaniel D. Daw, Jonathan D. Cohen
+    <p><a href='https://www.biorxiv.org/content/10.1101/2020.09.08.287276v1'>The Temporal Dynamics of Opportunity Costs: A Normative Account of Fatigue and Boredom</a>
+      <br/>Mayank Agrawal, Marcelo G. Mattar, Jonathan D. Cohen, Nathaniel D. Daw
     </p>
 
       <p>Rediscovering and Extending Theories of Human Decision Making via Constrained Data-driven Learning
       <br/>Joshua C. Peterson, David D. Bourgin, Mayank Agrawal, Daniel Reichman, Thomas L. Griffiths
-    </p>
+        </p>
+
+<!--       <p>An Application of Computational Learning Theory to Moral Epistemology
+      <br/>Mayank Agrawal
+    </p> -->
 
   </div>
 
