--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
     <div style="margin-left: 2em;">
 
-    <p><a href='https://www.biorxiv.org/content/10.1101/2020.09.08.287276v1'>The Temporal Dynamics of Opportunity Costs: A Normative Account of Fatigue and Boredom</a>
+    <p><a href='https://www.biorxiv.org/content/10.1101/2020.09.08.287276v1'>The Temporal Dynamics of Opportunity Costs: A Normative Account of Cognitive Fatigue and Boredom</a>
       <br/>Mayank Agrawal, Marcelo G. Mattar, Jonathan D. Cohen, Nathaniel D. Daw
     </p>
 
