--- a/index.html
+++ b/index.html
@@ -4,6 +4,17 @@
 
 
 <head>
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-Y2ETBJ4CD5"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-Y2ETBJ4CD5');
+</script>
+
     <title>Mayank Agrawal</title>
     <!-- CSS -->
     <link rel="stylesheet" href="style.css">
@@ -76,9 +87,6 @@
       <br/>Joshua C. Peterson, David D. Bourgin, Mayank Agrawal, Daniel Reichman, Thomas L. Griffiths
         </p>
 
-<!--       <p>An Application of Computational Learning Theory to Moral Epistemology
-      <br/>Mayank Agrawal
-    </p> -->
 
   </div>
 
