--- a/index.html
+++ b/index.html
@@ -53,6 +53,16 @@
 
     <div style="margin-left: 2em;">
 
+    <p><a href='https://www.biorxiv.org/content/10.1101/2020.09.08.287276v1'>The Temporal Dynamics of Opportunity Costs: A Normative Account of Cognitive Fatigue and Boredom</a>
+      <br/>Mayank Agrawal, Marcelo G. Mattar, Jonathan D. Cohen, Nathaniel D. Daw
+      <br/><i>Psychological Review (in press)</i>
+    </p>
+
+      <p>Using Large-Scale Experiments and Machine Learning to Discover Theories of Human Decision-Making
+      <br/>Joshua C. Peterson, David D. Bourgin, Mayank Agrawal, Daniel Reichman, Thomas L. Griffiths
+      <br/><i>Science (in press)</i>
+        </p>
+
     <p><a href="papers/AgrawalPetersonGriffiths20.pdf">Scaling up Psychology via Scientific Regret Minimization</a>
       <br/>Mayank Agrawal, Joshua C. Peterson, Thomas L. Griffiths
       <br/><i>Proceedings of the National Academy of Sciences</i>
@@ -76,17 +86,11 @@
 
     </div>
 
-    <h2>working papers</h2>
+<!--     <h2>working papers</h2>
 
     <div style="margin-left: 2em;">
 
-    <p><a href='https://www.biorxiv.org/content/10.1101/2020.09.08.287276v1'>The Temporal Dynamics of Opportunity Costs: A Normative Account of Cognitive Fatigue and Boredom</a>
-      <br/>Mayank Agrawal, Marcelo G. Mattar, Jonathan D. Cohen, Nathaniel D. Daw
-    </p>
-
-      <p>Rediscovering and Extending Theories of Human Decision Making via Constrained Data-driven Learning
-      <br/>Joshua C. Peterson, David D. Bourgin, Mayank Agrawal, Daniel Reichman, Thomas L. Griffiths
-        </p>
+ -->
 
 
   </div>
