--- a/index.html
+++ b/index.html
@@ -58,9 +58,9 @@
       <br/><i>Psychological Review (in press)</i>
     </p>
 
-      <p>Using Large-Scale Experiments and Machine Learning to Discover Theories of Human Decision-Making
+      <p><a href="papers/PetersonBourginAgrawalReichmanGriffiths21.pdf">Using Large-Scale Experiments and Machine Learning to Discover Theories of Human Decision-Making</a>
       <br/>Joshua C. Peterson, David D. Bourgin, Mayank Agrawal, Daniel Reichman, Thomas L. Griffiths
-      <br/><i>Science (in press)</i>
+      <br/><i>Science</i>
         </p>
 
     <p><a href="papers/AgrawalPetersonGriffiths20.pdf">Scaling up Psychology via Scientific Regret Minimization</a>
