--- a/index.html
+++ b/index.html
@@ -49,13 +49,13 @@
 
     </div>
 
-    <h2>publications</h2>
+    <h2>selected publications</h2>
 
     <div style="margin-left: 2em;">
 
-    <p><a href='https://www.biorxiv.org/content/10.1101/2020.09.08.287276v1'>The Temporal Dynamics of Opportunity Costs: A Normative Account of Cognitive Fatigue and Boredom</a>
+    <p><a href="papers/AgrawalMattarCohenDaw21.pdf">The Temporal Dynamics of Opportunity Costs: A Normative Account of Cognitive Fatigue and Boredom</a>
       <br/>Mayank Agrawal, Marcelo G. Mattar, Jonathan D. Cohen, Nathaniel D. Daw
-      <br/><i>Psychological Review (in press)</i>
+      <br/><i>Psychological Review</i>
     </p>
 
       <p><a href="papers/PetersonBourginAgrawalReichmanGriffiths21.pdf">Using Large-Scale Experiments and Machine Learning to Discover Theories of Human Decision-Making</a>
