--- a/index.html
+++ b/index.html
@@ -53,15 +53,15 @@
 
     <div style="margin-left: 2em;">
 
-    <p><a href="papers/AgrawalMattarCohenDaw21.pdf">The Temporal Dynamics of Opportunity Costs: A Normative Account of Cognitive Fatigue and Boredom</a>
-      <br/>Mayank Agrawal, Marcelo G. Mattar, Jonathan D. Cohen, Nathaniel D. Daw
-      <br/><i>Psychological Review</i>
-    </p>
-
       <p><a href="papers/PetersonBourginAgrawalReichmanGriffiths21.pdf">Using Large-Scale Experiments and Machine Learning to Discover Theories of Human Decision-Making</a>
       <br/>Joshua C. Peterson, David D. Bourgin, Mayank Agrawal, Daniel Reichman, Thomas L. Griffiths
       <br/><i>Science</i>
         </p>
+
+    <p><a href="papers/AgrawalMattarCohenDaw21.pdf">The Temporal Dynamics of Opportunity Costs: A Normative Account of Cognitive Fatigue and Boredom</a>
+      <br/>Mayank Agrawal, Marcelo G. Mattar, Jonathan D. Cohen, Nathaniel D. Daw
+      <br/><i>Psychological Review</i>
+    </p>
 
     <p><a href="papers/AgrawalPetersonGriffiths20.pdf">Scaling up Psychology via Scientific Regret Minimization</a>
       <br/>Mayank Agrawal, Joshua C. Peterson, Thomas L. Griffiths
@@ -86,12 +86,18 @@
 
     </div>
 
-<!--     <h2>working papers</h2>
+    <h2>working papers</h2>
 
     <div style="margin-left: 2em;">
 
- -->
 
+    <p>Stress, Intertemporal Choice, and Mitigation Behavior During the COVID-19 Pandemic
+      <br/>Mayank Agrawal, Joshua C. Peterson, Jonathan D. Cohen, Thomas L. Griffiths
+    </p>
+
+    <p>A Computational Model of Unintentional Mind Wandering in Focused Attention Meditation
+      <br/>Isaac Christian and Mayank Agrawal
+    </p>
 
   </div>
 
