--- a/index.html
+++ b/index.html
@@ -102,12 +102,9 @@
   </div>
 
 
-    <br>
-    <br>
-    <br>
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
-        <tr><td><br><p align="right"><font size="2">
-        Template adapted from <a href="http://willzeng.com/">Will Zeng</a>
+        <tr><td><br><p align="right" style="color:#ee3e61;"><font size="2">
+        template inspo: <a href="http://willzeng.com/" style="color:#ee3e61;">here</a> and <a href="https://www.nike.com/t/liverpool-fc-2021-22-match-away-mens-dri-fit-adv-soccer-jersey-25wgkg/DB2532-239?nikemt=true&cp=75009274456_search_||g|11184633505|106856862702||c&gclid=EAIaIQobChMIx8yF4Pz89QIV9f7jBx2FvAAMEAQYASABEgIQpvD_BwE" style="color:#ee3e61;">here</a>
         </font></p></td></tr>
     </table>
 
