--- a/index.html
+++ b/index.html
@@ -36,14 +36,28 @@
     <!-- About -->
     <h2>overview</h2>
     <div style="margin-left: 2em;">
-    <p>I am a PhD Student in Psychology and Neuroscience at Princeton University, advised by <a href="https://ncclab.princeton.edu/">Jon Cohen</a> and <a href="http://cocosci.princeton.edu/" >Tom Griffiths</a>. I am broadly interested in human and machine intelligence, and I use computational (neuro)scientific approaches to study high-level cognitive functions such as learning, decision-making, memory, and control.
+    <p>I am a PhD Student in Psychology and Neuroscience at Princeton University, advised by <a href="https://ncclab.princeton.edu/">Jon Cohen</a> and <a href="http://cocosci.princeton.edu/" >Tom Griffiths</a>. Previously, I studied Computer Science and Philosophy at Swarthmore College, where I wrote a thesis under <a href="https://www.swarthmore.edu/profile/alan-baker">Alan Baker</a> using computational learning theory to formalize problems in moral epistemology. </p> 
+
+    <p>
+
+    I study the computational foundations of human cognition. My research is largely interdisciplinary and uses the toolkit of cognitive (neuro)science, machine learning, and analytic philosophy to understand high-level cognitive functions such as learning, decision-making, memory, and control.
+
     </p>
 
-    <p>Previously, I was an undergraduate at Swarthmore College, where I studied Computer Science and Philosophy. I wrote a thesis under <a href="https://www.swarthmore.edu/profile/alan-baker">Alan Baker</a> using computational learning theory to formalize problems in moral epistemology.
+    <p>
+    Specifically, my current research programs can be summarized as the following:
+
+    <ul>
+      <li>computational cognitive neuroscientific accounts of mental effort</li>
+      <li>big data and machine learning for theoretical and explanatory progress</li>
+      <li>bounded rationality as a normative standard for philosophy</li>
+    </ul>
+
     </p>
 
+    <p>
 
-    <p>I have also spent time at Kallyope, the University of Oxford, Mercury Fund, Carnegie Mellon University, the University of Pennsylvania, and Breakthrough Houston.
+        My interests have led me to stints elsewhere in the academic (Oxford, Carnegie Mellon, Penn), industry (Kallyope, Mercury Fund), and the nonprofit (Breakthrough Collaborative) sectors.
     </p>
 
 
