--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
     <p>
 
-        My interests have led me to stints elsewhere in the academic (Oxford, Carnegie Mellon, Penn), industry (Kallyope, Mercury Fund), and the nonprofit (Breakthrough Collaborative) sectors.
+        My interests have led me to stints elsewhere in the academic (Oxford, Carnegie Mellon, Penn), industry (Kallyope, Mercury Fund), and nonprofit (Breakthrough Collaborative) sectors.
     </p>
 
 
