--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <p>
 
-    I study the computational foundations of human cognition. My research is largely interdisciplinary and uses the toolkit of cognitive (neuro)science, machine learning, and analytic philosophy to understand high-level cognitive functions such as learning, decision-making, memory, and control.
+    I study the computational foundations of human intelligence. My research is largely interdisciplinary and uses the toolkit of cognitive (neuro)science, machine learning, and analytic philosophy to understand high-level cognitive functions such as learning, decision-making, memory, and control.
 
     </p>
 
@@ -57,7 +57,7 @@
 
     <p>
 
-        My interests have led me to stints elsewhere in the academic (Oxford, Carnegie Mellon, Penn), industry (Kallyope, Mercury Fund), and nonprofit (Breakthrough Collaborative) sectors.
+        My interests have led me to stints elsewhere in the academic (Oxford, Carnegie Mellon, Penn), commercial (Kallyope, Mercury Fund), and nonprofit (Breakthrough Collaborative) sectors.
     </p>
 
 
