--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
     <p>
 
-    I study the computational foundations of human intelligence. My research is largely interdisciplinary and uses the toolkit of cognitive (neuro)science, machine learning, and analytic philosophy to understand high-level cognitive functions such as learning, decision-making, memory, and control.
+    I study the computational foundations of human cognition. My research is largely interdisciplinary and uses the toolkit of cognitive (neuro)science, machine learning, and analytic philosophy to understand high-level cognitive functions such as learning, decision-making, memory, and control.
 
     </p>
 
