--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
  -->         <a href="MayankAgrawalCV.pdf" >cv</a> &nbsp/&nbsp
          <a href="https://twitter.com/_magrawal" >twitter</a> &nbsp/&nbsp
          <a href="https://scholar.google.com/citations?user=H_fTQ0EAAAAJ&hl=en">scholar</a> &nbsp/
+         <a href="https://linkedin.com/in/mayank-agrawal-08849aa6
+">linkedin</a> &nbsp/
 <!--          <a href="miscellany.html">miscellany</a> &nbsp/
  -->
     <!-- About -->
