post-summer update

--- a/index.html
+++ b/index.html
@@ -69,6 +69,11 @@
 
     <div style="margin-left: 2em;">
 
+    <p><a href="papers/ChristianAgrawal22.pdf">A Computational Model of Unintentional Mind Wandering in Focused Attention Meditation</a>
+      <br/>Isaac Christian and Mayank Agrawal
+      <br/><i>Proceedings of the 44th Annual Conference of the Cognitive Science Society</i>
+    </p>
+
       <p><a href="papers/PetersonBourginAgrawalReichmanGriffiths21.pdf">Using Large-Scale Experiments and Machine Learning to Discover Theories of Human Decision-Making</a>
       <br/>Joshua C. Peterson, David D. Bourgin, Mayank Agrawal, Daniel Reichman, Thomas L. Griffiths
       <br/><i>Science</i>
@@ -107,20 +112,21 @@
     <div style="margin-left: 2em;">
 
 
-    <p>Stress, Intertemporal Choice, and Mitigation Behavior During the COVID-19 Pandemic
+    <p><a href='https://psyarxiv.com/ureqg/'>Stress, Intertemporal Choice, and Mitigation Behavior During the COVID-19 Pandemic</a>
       <br/>Mayank Agrawal, Joshua C. Peterson, Jonathan D. Cohen, Thomas L. Griffiths
     </p>
 
-    <p>A Computational Model of Unintentional Mind Wandering in Focused Attention Meditation
-      <br/>Isaac Christian and Mayank Agrawal
+    <p>Maxim Consequentialism for Bounded Agents
+      <br/>Mayank Agrawal and David Danks
     </p>
+
 
   </div>
 
 
     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
         <tr><td><br><p align="right" style="color:#ee3e61;"><font size="2">
-        template inspo: <a href="http://willzeng.com/" style="color:#ee3e61;">here</a> and <a href="https://www.nike.com/t/liverpool-fc-2021-22-match-away-mens-dri-fit-adv-soccer-jersey-25wgkg/DB2532-239?nikemt=true&cp=75009274456_search_||g|11184633505|106856862702||c&gclid=EAIaIQobChMIx8yF4Pz89QIV9f7jBx2FvAAMEAQYASABEgIQpvD_BwE" style="color:#ee3e61;">here</a>
+        template inspo: <a href="http://willzeng.com/" style="color:#ee3e61;">here</a> and <a href="https://www.google.com/search?q=liverpool+away+kit+21%2F22&tbm=isch&source=hp&biw=1440&bih=686&ei=S5rNYu7xD9K6qtsPiJiwoAI&iflsig=AJiK0e8AAAAAYs2oW6Wo-Cakupebw6C78m2LhMsvnNAS&oq=liverpool+away&gs_lcp=CgNpbWcQAxgBMgsIABCABBCxAxCDATIICAAQgAQQsQMyCwgAEIAEELEDEIMBMgUIABCABDIECAAQAzIECAAQAzILCAAQgAQQsQMQgwEyBQgAEIAEMggIABCABBCxAzIFCAAQgAQ6CAgAELEDEIMBUPEBWOkNYL8XaABwAHgAgAFDiAH8BJIBAjE0mAEAoAEBqgELZ3dzLXdpei1pbWewAQA&sclient=img" style="color:#ee3e61;">here</a>
         </font></p></td></tr>
     </table>
 
