--- a/portfolio.html
+++ b/portfolio.html
@@ -94,7 +94,7 @@
 
     <h4>Computational Biology</h4>
 
-    Can we simulate the protein development pipeline using AI? I did this at Kallyope and applied my pipeline to their proprietary genomic sequencing data in order to predict novel hormones the body may be producing.
+    Can we simulate the protein development pipeline using AI? I did this at <a href="https://kallyope.com/">Kallyope</a> and applied my pipeline to their proprietary genomic sequencing data in order to predict novel hormones the body may be producing.
 
     <h2>what i am looking for</h2>
 
