--- a/portfolio.html
+++ b/portfolio.html
@@ -29,11 +29,11 @@
     <!-- About -->
     <h2>overview</h2>
 
-    <p>In lieu (or rather in addition to) a <a href="https://mayank-agrawal.com/MayankAgrawalResume.pdf">resume</a> or <a href="https://mayank-agrawal.com/MayankAgrawalCV.pdf">academic cv</a>, below highlights what I can bring to an organization.</p>
+    <p>I have spent the last nine years working at the interface of science, technology, and business. I have led transformative projects as a university researcher, applied AI to commercial (biotechnology) and nonprofit (education) domains, and worked with venture capitalists to analyze and map out industry trends.
+    <br><br>
+    In lieu (or rather in addition to) a <a href="https://mayank-agrawal.com/MayankAgrawalResume.pdf">resume</a> or <a href="https://mayank-agrawal.com/MayankAgrawalCV.pdf">academic cv</a>, below highlights what I can bring to an organization.</p>
 
     <p>
-    Specifically, important traits of mine are
-
     <ul>
       <li>world-class research expertise (machine learning, behavioral science, cognitive neuroscience)</li>
       <li>analytical + data-driven</li>
@@ -51,22 +51,22 @@
 
     <h2>academic research</h2>
 
-      In academic research settings, your objective/product is to write high-impact (prestigious) research papers catered to experts in your field.
+      In academic research settings, your objective/product is to write high-impact research papers. I am finishing up my PhD at Princeton University, where I created two influential programs. 
 
     <h4>Explainable AI for Human Decision-Making</h4>
 
-      Our research (published in <a href="https://mayank-agrawal.com/papers/PetersonBourginAgrawalReichmanGriffiths21.pdf">Science</a> and <a href="https://mayank-agrawal.com/papers/AgrawalPetersonGriffiths20.pdf">PNAS</a>; premier journals) shows how to extract qualitative, interpretable insights from data-driven, black-box machine learning models. The general idea is to train both black-box, machine learning model as well as simpler models one fully understands, and then compare/contrast these models to identify differences. We have used this to improve (more accurate and more interpretable) models of human moral and economic decision-making.
+      Our research (published in <a href="https://mayank-agrawal.com/papers/PetersonBourginAgrawalReichmanGriffiths21.pdf">Science</a> and <a href="https://mayank-agrawal.com/papers/AgrawalPetersonGriffiths20.pdf">PNAS</a>) shows how to (a) build state-of-the-art machine learning models of human behavior and (b) probe these models to identify precise and actionable insights.
       <br><br>
       Sample Implications:
       <ul>
-        <li>Suppose an AI can predict cancer diagnoses better than a doctor. With our research, we can identify what the AI is picking up on that the doctor is missing, so now the doctor can (i) improve his/her/their own skills and (ii) increase their trust in the AI to make diagnostic decisions.
+        <li>Let's build an AI that can predict cancer diagnoses better than a doctor. But, we won't stop there. Then, we 'do science' on these models so that we can identify what the AI is picking up on that the doctor is missing. The doctor can now (i) improve his/her/their own skills and (ii) increase their trust in the AI to make diagnostic decisions.
         <br><br>
         <li>Playing an athlete is predictive of wins, but analysts can't understand why. Our work helps the analyst understand what the model is identifying. Perhaps it reflects a complicated function of their basic stats, or perhaps it reflects some 'intangibles' (e.g. a good teammate) which we can reverse-engineer.
       </ul>
 
     <h4>Neuroscience of Cognitive Fatigue + Boredom</h4>
 
-      Why do we feel tired or bored after working? Our research published in <a href="https://mayank-agrawal.com/papers/AgrawalMattarCohenDaw21.pdf">Psychological Review</a> (premier journal) offers a new, rational perspective on why (and when) resting is beneficial. The general idea is that your brain is actually very active at 'rest'. Specifically, one brain function (hippocampal replay) is to integrate recent memories with your general decision-making system. We can compute the value of this integration process and compare/contrast it with the value of the current task to identify whether it is rational to work or rest at any time point.
+      Why do we feel tired or bored after working? Our research published in <a href="https://mayank-agrawal.com/papers/AgrawalMattarCohenDaw21.pdf">Psychological Review</a> offers a new, rational perspective on why (and when) resting is beneficial. The general idea is that your brain is actually very active at 'rest'. Specifically, hippocampal replay is a brain function that integrates recent memories with your general decision-making system. We can compute the value of this integration process and compare/contrast it with the value of the current task to identify whether it is rational to work or rest at any time point.
 
       <br><br>
       Sample Implications:
@@ -98,7 +98,7 @@
 
     <h2>what i am looking for</h2>
 
-    I defend my PhD from Princeton in Summer 2023. I am looking to work in a senior analytics or operations role with driven, highly-motivated teammates. I am prioritizing mission/impact, organizational culture, and compensation. Please reach out at mayank (dot) agrawal (at) princeton (dot) edu
+    I defend my PhD from Princeton in Summer 2023. I am looking to work in a senior analytics or operations role with driven, highly-motivated teammates. I am prioritizing mission/impact, organizational culture, and compensation. Please reach out at mayank (dot) agrawal (at) princeton (dot) edu. I am more than happy to provide references from my prior supervisors/colleagues.
 
 
 <!--     <table width="100%" align="center" border="0" cellspacing="0" cellpadding="10">
