--- a/index.html
+++ b/index.html
@@ -62,12 +62,19 @@
         My interests have led me to stints elsewhere in the academic (Oxford, Carnegie Mellon, Penn), commercial (Kallyope, Mercury Fund), and nonprofit (Breakthrough Collaborative) sectors.
     </p>
 
+    <p>Are you a fan of my work and want to support it? <a href='https://www.buymeacoffee.com/magrawal'>Buy me a coffee!</a></p>
+
 
     </div>
 
     <h2>publications</h2>
 
     <div style="margin-left: 2em;">
+
+    <p><a href='papers/AgrawalPetersonCohenGriffiths23.pdf'>Stress, Intertemporal Choice, and Mitigation Behavior During the COVID-19 Pandemic</a>
+      <br/>Mayank Agrawal, Joshua C. Peterson, Jonathan D. Cohen, Thomas L. Griffiths
+      <br/><i>Journal of Experimental Psychology: General</i>
+    </p>
 
     <p><a href="papers/ChristianAgrawal22.pdf">A Computational Model of Unintentional Mind Wandering in Focused Attention Meditation</a>
       <br/>Isaac Christian and Mayank Agrawal
@@ -110,11 +117,6 @@
     <h2>working papers</h2>
 
     <div style="margin-left: 2em;">
-
-
-    <p><a href='https://psyarxiv.com/ureqg/'>Stress, Intertemporal Choice, and Mitigation Behavior During the COVID-19 Pandemic</a>
-      <br/>Mayank Agrawal, Joshua C. Peterson, Jonathan D. Cohen, Thomas L. Griffiths
-    </p>
 
     <p>Maxim Consequentialism for Bounded Agents
       <br/>Mayank Agrawal and David Danks
