--- a/research.html
+++ b/research.html
@@ -40,24 +40,25 @@
     <h2>overview</h2>
     <div style="margin-left: 2em;">
 
-
-    <p>I am currently building <a href='roundtable.ai'>Roundtable</a> (YC S23) with <a href='https://matthardy.org/'>Matt Hardy</a>. Roundtable aims to develop artificial intelligence infrastructure for user and market researchers.</p>
-
-
-    <p>Previously, I was a PhD Student in Psychology and Neuroscience at Princeton University, advised by <a href="https://ncclab.princeton.edu/">Jon Cohen</a>, <a href="http://cocosci.princeton.edu/" >Tom Griffiths</a>, and <a href="http://dawlab.princeton.edu/" >Nathaniel Daw</a>. Before that, I studied Computer Science and Philosophy at Swarthmore College. My research overview can be accessed <a href="research.html">here</a>.
-
     <p>
 
-        My interests have led me to stints elsewhere in the academic (Oxford, Carnegie Mellon, Penn), commercial (Kallyope, Mercury Fund), and nonprofit (Breakthrough Collaborative) sectors.
+    I study the computational foundations of human cognition. My research is largely interdisciplinary and uses the toolkit of cognitive (neuro)science, machine learning, and analytic philosophy to understand high-level cognitive functions such as learning, decision-making, memory, and control.
+
     </p>
 
+    <p>
+    Specifically, my academic research programs can be summarized as:
 
-    <p>Are you a fan of my work and want to support it? <a href='https://www.buymeacoffee.com/magrawal'>Buy me a coffee!</a></p>
+    <ul>
+      <li>computational cognitive neuroscientific accounts of mental effort</li>
+      <li>big data and machine learning for theoretical and explanatory progress</li>
+      <li>bounded rationality as a normative standard for philosophy</li>
+    </ul>
 
-
+    </p>
     </div>
 
-    <!-- <h2>publications</h2>
+     <h2>publications</h2>
 
     <div style="margin-left: 2em;">
 
@@ -110,7 +111,7 @@
 
     <p>Maxim Consequentialism for Bounded Agents
       <br/>Mayank Agrawal and David Danks
-    </p> -->
+    </p>
 
 
   </div>
