--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     <div style="margin-left: 2em;">
 
 
-    <p>I am currently building <a href='https://roundtable.ai'>Roundtable</a> (YC S23) with <a href='https://matthardy.org/'>Matt Hardy</a>. Roundtable aims to develop artificial intelligence infrastructure for user and market researchers.</p>
+    <p>I am currently building <a href='https://roundtable.ai'>Roundtable</a> (YC S23) with <a href='https://matthardy.org/'>Matt Hardy</a>. Roundtable builds artificial intelligence infrastructure for user and market researchers.</p>
 
 
     <p>Previously, I was a PhD Student in Psychology and Neuroscience at Princeton University, advised by <a href="https://ncclab.princeton.edu/">Jon Cohen</a>, <a href="http://cocosci.princeton.edu/" >Tom Griffiths</a>, and <a href="http://dawlab.princeton.edu/" >Nathaniel Daw</a>. Before that, I studied Computer Science and Philosophy at Swarthmore College. My research overview can be accessed <a href="research.html">here</a>.
