what i worked on

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
     <p>
 
-        My interests have led me to stints elsewhere in the academic (Oxford, Carnegie Mellon, Penn), commercial (Kallyope, Mercury Fund), and nonprofit (Breakthrough Collaborative) sectors.
+        My interests have led me to stints elsewhere in the academic (Oxford, Carnegie Mellon, Penn), commercial (Kallyope, Mercury Fund), and nonprofit (Breakthrough Collaborative) sectors. You can see a blog post of my previous work <a href="portfolio2.html">here</a>.
     </p>
 
 
