--- a/index.html
+++ b/index.html
@@ -41,14 +41,14 @@
     <div style="margin-left: 2em;">
 
 
-    <p>I am currently building <a href='https://roundtable.ai'>Roundtable</a> (YC S23) with <a href='https://matthardy.org/'>Matt Hardy</a>. Roundtable builds artificial intelligence infrastructure for user and market researchers.</p>
+    <p>I am currently building <a href='https://roundtable.ai'>Roundtable</a> (YC S23) with <a href='https://matthardy.org/'>Matt Hardy</a>. We provide automated data cleaning and fraud detection for market research firms including JD Power, Directions Group, and Respondent.io. We've also built a <a href='https://news.ycombinator.com/item?id=36865625'>simulated survey tool</a> and an <a href='https://github.com/roundtableAI/roundtable-js'>open-source programmable survey software</a>.
 
 
     <p>Previously, I was a PhD Student in Psychology and Neuroscience at Princeton University, advised by <a href="https://ncclab.princeton.edu/">Jon Cohen</a>, <a href="http://cocosci.princeton.edu/" >Tom Griffiths</a>, and <a href="http://dawlab.princeton.edu/" >Nathaniel Daw</a>. Before that, I studied Computer Science and Philosophy at Swarthmore College. My research overview can be accessed <a href="research.html">here</a>.
 
     <p>
 
-        My interests have led me to stints elsewhere in the academic (Oxford, Carnegie Mellon, Penn), commercial (Kallyope, Mercury Fund), and nonprofit (Breakthrough Collaborative) sectors. You can see a blog post of my previous work <a href="portfolio2.html">here</a>.
+        My interests have led me to stints elsewhere in the academic (Oxford, Carnegie Mellon, Penn), commercial (Kallyope, Mercury Fund), and nonprofit (Breakthrough Collaborative) sectors.
     </p>
 
 
